corrected the image path in logo.astro

--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -1,6 +1,6 @@
 ---
 import {Icon} from 'astro-icon';
-import mmLogo from '../icons/mm-logo.svg'
+import mmLogo from '../icons/mm-logo.png'
 ---
 
 <!-- Feel free to replace this with the SVG for your own logo -->
