updated content in achievement section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -82,7 +82,7 @@ const seo = {
         <h3 class="fade-in">Achievements</h3>
         <!-- <img src="../icons/access-certi.png" alt="Achievement Image" />
         <img src="../icons/access-logo.png" alt="Access Image" /> -->
-        <p class="fade-in"><a href="https://accessccf.com/womens-business-accelerator/" target="_blank">November 2023's Pitch Competition Winner</a></p>
+        <p class="fade-in"><a href="https://accessccf.com/womens-business-accelerator/" target="_blank">November 2023 - WBA Pitch Competition Winner</a></p>
       </article>
 
     </article>
